fixed data errors

--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -98,49 +98,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(model, tokenizer, text):\n",
-    "    bert_encodes = tokenizer.pipeline_tokenize(text, max_len=256)\n",
+    "    bert_encodes = tokenizer(\n",
+    "        text, \n",
+    "        add_special_tokens=True, \n",
+    "        truncation=True, \n",
+    "        max_length=256,\n",
+    "        return_tensors='pt'\n",
+    "    )\n",
     "    output = model.predict(**bert_encodes)\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_case = \"how is the current liabilities in the latest year?\"\n",
-    "o = predict(model, tokenizer, test_case)"
+    "text = \"what is the trade and other current payables in the calendar year?\"\n",
+    "o = predict(model, tokenizer, text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_encodes = tokenizer(\n",
+    "    text, \n",
+    "    add_special_tokens=True, \n",
+    "    truncation=True, \n",
+    "    max_length=256,\n",
+    "    return_tensors='pt'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_encodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = model(**bert_encodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tags': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       " 'intent': tensor([0])}"
+       "{'tags': tensor([[ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0799, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804],\n",
+       "         [ 5.1541, -1.0479, -5.5954, -0.7491,  0.2225, -1.3268, -1.0800, -2.2567,\n",
+       "          -1.1802, -1.4342, -1.0662, -1.1117, -1.1067, -0.4033, -0.5380,  0.2236,\n",
+       "           0.8920,  0.1433,  0.0643,  0.4633, -0.2504, -0.2810, -1.0804]],\n",
+       "        grad_fn=<ViewBackward0>),\n",
+       " 'intent': tensor([[ 2.6366,  0.3670, -0.3705, -0.4842]], grad_fn=<AddmmBackward0>)}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
