--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "from spacy.training import biluo_tags_to_offsets, iob_to_biluo, offsets_to_biluo_tags, biluo_to_iob\n",
+    "\n",
+    "fillmask = pipeline('fill-mask', model=\"distilroberta-base\")\n",
+    "mask_token = fillmask.tokenizer.mask_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1075,8 +1088,6 @@
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
-    "from spacy.training import biluo_tags_to_offsets, iob_to_biluo, offsets_to_biluo_tags\n",
     "\n",
     "s_ENT = '[E]'\n",
     "e_ENT = '[/E]'\n",
@@ -1095,7 +1106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlu_tokenizer.bert.add_special_tokens({\"additional_special_tokens\":[s_ENT, e_ENT]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1104,80 +1135,157 @@
        "'what happens to the [E]sales and selling general administrative ratio[/E] when the [E]cost of sales ratio[/E] [E]decreases[/E] by [E]17 %[/E] in the [E]first quarter[/E]'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def remapping(text, ents)\n",
+    "def remapping(text, ents):\n",
     "    splitted = []\n",
     "    text_copy = text[:]\n",
-    "    s_prev, e_prev = 0, 0\n",
-    "    for s, e, ent in ents:\n",
+    "    e_prev = 0\n",
+    "    for s, e, _ in ents:\n",
     "        new_s = s-e_prev\n",
     "        new_e = e-e_prev\n",
     "        splitted.append(text_copy[:new_s])\n",
     "        splitted.append(f_ENT(text_copy[new_s:new_e]))\n",
     "        text_copy = text_copy[new_e:]\n",
-    "        s_prev = s\n",
     "        e_prev = e\n",
     "    new_text = ''.join(splitted)\n",
-    "    new_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fillmask = pipeline('fill-mask', model=\"distilroberta-base\")\n",
-    "mask_token = fillmask.tokenizer.mask_token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bert_tokens = nlu_tokenizer.bert_tokenize(text)\n",
+    "    return new_text\n",
     "\n",
-    "bert_offset_mapping = nlu_tokenizer.bert(text, add_special_tokens=False, return_offsets_mapping=True)['offset_mapping']\n",
-    "tags = nlu_tokenizer.offset_mapping_to_tags(offset_mapping=bert_offset_mapping, ents=ents)\n",
-    "tags = biluo_to_iob(tags)"
+    "remapped_text = remapping(text, ents)\n",
+    "remapped_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['what',\n",
+       " 'happens',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " '[E]',\n",
+       " 'sales',\n",
+       " 'and',\n",
+       " 'selling',\n",
+       " 'general',\n",
+       " 'administrative',\n",
+       " 'ratio',\n",
+       " '[/E]',\n",
+       " 'when',\n",
+       " 'the',\n",
+       " '[E]',\n",
+       " 'cost',\n",
+       " 'of',\n",
+       " 'sales',\n",
+       " 'ratio',\n",
+       " '[/E]',\n",
+       " '[E]',\n",
+       " 'decreases',\n",
+       " '[/E]',\n",
+       " 'by',\n",
+       " '[E]',\n",
+       " '17',\n",
+       " '%',\n",
+       " '[/E]',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " '[E]',\n",
+       " 'first',\n",
+       " 'quarter',\n",
+       " '[/E]']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "masks = [i for i, t in enumerate(tags) if t == 'O']"
+    "bert_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "5\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Some Tokens are not properly assigned['O', 'O', 'O', 'O', 'O', '-', '-', '-', '-', '-', '-', '-', 'O', '-', '-', '-', '-', '-', '-', '-', 'O', '-', '-', '-', '-', '-', '-', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5040/3342560715.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mbert_offset_mapping\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnlu_tokenizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mremapped_text\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madd_special_tokens\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_offsets_mapping\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'offset_mapping'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtags\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnlu_tokenizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moffset_mapping_to_tags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moffset_mapping\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbert_offset_mapping\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ments\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0ments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mtags\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbiluo_to_iob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\simon\\Desktop\\Codes\\FSQA\\src\\nlu_utils.py\u001b[0m in \u001b[0;36moffset_mapping_to_tags\u001b[1;34m(self, offset_mapping, ents)\u001b[0m\n\u001b[0;32m    201\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34m'-'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    202\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 203\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Some Tokens are not properly assigned'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mf'{labels}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    204\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    205\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Some Tokens are not properly assigned['O', 'O', 'O', 'O', 'O', '-', '-', '-', '-', '-', '-', '-', 'O', '-', '-', '-', '-', '-', '-', '-', 'O', '-', '-', '-', '-', '-', '-', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O']"
+     ]
+    }
+   ],
+   "source": [
+    "bert_tokens = nlu_tokenizer.bert_tokenize(remapped_text)\n",
+    "\n",
+    "bert_offset_mapping = nlu_tokenizer.bert(remapped_text, add_special_tokens=True, return_offsets_mapping=True)['offset_mapping']\n",
+    "tags = nlu_tokenizer.offset_mapping_to_tags(offset_mapping=bert_offset_mapping, ents=ents)\n",
+    "tags = biluo_to_iob(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 10, 11, 17, 20, 21, 24]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masks = [i for i, t in enumerate(tags) if t == 'O']\n",
+    "masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['what happens with the sales and selling general administrative ratio when the cost of sales ratio decreases by 17 % in the first quarter?',\n",
-       " 'what happens about the sales and selling general administrative ratio when the cost of sales ratio decreases by 17 % in the first quarter?']"
+       "['what happens to the sales and selling general administrative ratio when the cost of sales ratio decreases below 17 % in the first quarter?',\n",
+       " 'what happens to the sales and selling general administrative ratio when the cost of sales ratio decreases to 17 % in the first quarter?']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,8 +1293,7 @@
    "source": [
     "K = np.random.choice(masks)\n",
     "print(K)\n",
-    "# K = masks[-1]\n",
-    "masked_sentence = \" \".join(bert_tokens[:K]  + [mask_token] + bert_tokens[K+1:])\n",
+    "masked_sentence = \" \".join(bert_tokens[:K] + [mask_token] + bert_tokens[K+1:])\n",
     "predictions = fillmask(masked_sentence)\n",
     "augmented_sequences = [predictions[i]['sequence'] for i in range(3) if predictions[i]['sequence'] != text]\n",
     "for aug_s in augmented_sequences:\n",
@@ -1196,22 +1303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'the'"
+       "'what happens to the sales and selling general administrative ratio when the cost of sales ratio decreases to 17 % in the first quarter?'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bert_tokens[11]"
+    "aug_s"
    ]
   },
   {
