--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,12 +116,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"what is the trade and other current payables in the calendar year?\"\n",
-    "o = predict(model, tokenizer, text)"
+    "data = {\"text\": \"-- dhaka newsroom 880-2-506363\", \"entities\": [[3, 17, \"ORG\"]], \"intent\": \"None\"}\n",
+    "text = data['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading: 100%|██████████| 15220/15220 [00:00<00:00, 91371.46it/s]\n",
+      "loading: 100%|██████████| 3060/3060 [00:00<00:00, 186329.62it/s]\n",
+      "loading: 100%|██████████| 2996/2996 [00:00<00:00, 187758.82it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_module.prepare_data()\n",
+    "train_dataset = data_module.create_dataset(data_module.train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = {k: torch.as_tensor([train_dataset[0][k]]) for k in ['input_ids', 'token_type_ids', 'attention_mask']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = model(**batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tags': tensor([[ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
+       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
+       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
+       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002]],\n",
+       "        grad_fn=<ViewBackward0>),\n",
+       " 'intent': tensor([[3.7420, 1.7622, 0.6772, 0.8999]], grad_fn=<AddmmBackward0>)}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tags': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " 'intent': tensor([0])}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o = predict(model, tokenizer, text)\n",
+    "o"
    ]
   },
   {
