redesign setting files

--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForTokenClassification: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -59,6 +59,8 @@
     "    'tags_size': len(data_module.tags2id), \n",
     "    'max_len': settings['max_len'],\n",
     "    'lr': settings['lr'],\n",
+    "    'weight_decay_rate': settings['weight_decay_rate'],\n",
+    "    'loss_type': settings['loss_type'],\n",
     "    'multigpu': True if settings['n_gpus'] > 1 else False\n",
     "}\n",
     "\n",
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading: 100%|██████████| 15220/15220 [00:00<00:00, 91371.46it/s]\n",
-      "loading: 100%|██████████| 3060/3060 [00:00<00:00, 186329.62it/s]\n",
-      "loading: 100%|██████████| 2996/2996 [00:00<00:00, 187758.82it/s]\n"
+      "loading: 100%|██████████| 15220/15220 [00:00<00:00, 86238.31it/s]\n",
+      "loading: 100%|██████████| 3060/3060 [00:00<00:00, 191766.83it/s]\n",
+      "loading: 100%|██████████| 2996/2996 [00:00<00:00, 200263.51it/s]\n"
      ]
     }
    ],
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,53 +175,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tags': tensor([[ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002],\n",
-       "         [ 4.4642, -1.6400, -5.3199, -1.4240, -0.1922, -2.1362, -1.8693, -2.8716,\n",
-       "          -1.5459, -2.0618, -1.3772, -1.6527, -1.6437, -1.0359, -1.0276, -0.4430,\n",
-       "           0.4706, -0.3875, -0.1287, -0.3992, -1.2704, -1.1272, -1.4002]],\n",
+       "{'tags': tensor([[ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010],\n",
+       "         [ 3.4260, -1.0233, -4.5061, -0.8361,  0.3515, -1.5198, -1.2052, -2.1704,\n",
+       "          -0.9339, -1.4328, -0.7987, -0.9890, -1.0170, -0.4447, -0.3669,  0.1521,\n",
+       "           0.9416,  0.2291,  0.6546,  0.1392, -0.5912, -0.5209, -0.8010]],\n",
        "        grad_fn=<ViewBackward0>),\n",
-       " 'intent': tensor([[3.7420, 1.7622, 0.6772, 0.8999]], grad_fn=<AddmmBackward0>)}"
+       " 'intent': tensor([[ 1.6666,  0.6649, -0.0307, -0.2821]], grad_fn=<AddmmBackward0>)}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,12 +269,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_encodes"
+    "import torch.nn as nn\n",
+    "ce = nn.CrossEntropyLoss(reduction='none')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logits = torch.FloatTensor([\n",
+    "    [9.3, -1.3, 0.14],\n",
+    "    [1.5, 7.3, 5.4],\n",
+    "    [9.3, -1.3, 0.14],\n",
+    "])\n",
+    "labels = torch.LongTensor([0, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.     5.942 10.6  ]\n",
+      "[ 0.     2.699 10.521]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ce_loss = ce(logits, labels)\n",
+    "pt = torch.exp(-ce_loss)\n",
+    "gamma = 300\n",
+    "alpha = 1\n",
+    "loss = alpha * (1-pt)**gamma * ce_loss\n",
+    "\n",
+    "print(ce_loss.numpy().round(3))\n",
+    "print(loss.numpy().round(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
