--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,6 +798,70 @@
     "    intents2id=data_module.intents2id,\n",
     ")\n",
     "train_dataloader = data_module.train_dataloader()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in train_dataloader:\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "c = Counter()\n",
+    "for l in x['tags']:\n",
+    "    c.update(l.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 2952,\n",
+       "         17: 22,\n",
+       "         18: 24,\n",
+       "         15: 21,\n",
+       "         16: 57,\n",
+       "         5: 13,\n",
+       "         1: 14,\n",
+       "         11: 14,\n",
+       "         12: 14,\n",
+       "         13: 21,\n",
+       "         14: 21,\n",
+       "         6: 13,\n",
+       "         19: 24,\n",
+       "         20: 8,\n",
+       "         9: 4,\n",
+       "         10: 7,\n",
+       "         21: 14,\n",
+       "         22: 10,\n",
+       "         3: 14,\n",
+       "         4: 40,\n",
+       "         7: 4,\n",
+       "         8: 17})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
    ]
   },
   {
