--- a/Notebooks/03_NER_training.ipynb
+++ b/Notebooks/03_NER_training.ipynb
@@ -1025,6 +1025,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('CurrentAssets', {'kor_name': '유동자산', 'eng_name': 'Current Assets', 'group': 'BS-Value-3'}), ('CashAndCashEquivalents', {'kor_name': '현금및현금성자산', 'eng_name': 'Cash and Cash Equivalents', 'group': 'BS-Value-4'}), ('TradeAndOtherCurrentReceivables', {'kor_name': '매출채권', 'eng_name': 'Trade and Other Current Receivables', 'group': 'BS-Value-4'}), ('PrepaidExpenses', {'kor_name': '선급비용', 'eng_name': 'Prepaid Expenses', 'group': 'BS-Value-4'}), ('Inventories', {'kor_name': '재고자산', 'eng_name': 'Inventories', 'group': 'BS-Value-4'}), ('NoncurrentAssets', {'kor_name': '비유동자산', 'eng_name': 'Noncurrent Assets', 'group': 'BS-Value-3'}), ('PropertyPlantAndEquipment', {'kor_name': '유형자산', 'eng_name': 'Property Plant and Equipment', 'group': 'BS-Value-4'}), ('IntangibleAssets', {'kor_name': '무형자산', 'eng_name': 'Intangible Assets', 'group': 'BS-Value-4'}), ('AssetsAbstract', {'kor_name': '자산총계', 'eng_name': 'Assets', 'group': 'BS-Value-1'}), ('CurrentLiabilities', {'kor_name': '유동부채', 'eng_name': 'Current Liabilities', 'group': 'BS-Value-3'}), ('TradeAndOtherCurrentPayables', {'kor_name': '매입채무 및 기타유동채무', 'eng_name': 'Trade and Other Current Payables', 'group': 'BS-Value-4'}), ('ShortTermBorrowings', {'kor_name': '단기차입금', 'eng_name': 'Short Term Borrowings', 'group': 'BS-Value-4'}), ('AdvancesCustomers', {'kor_name': '선수금', 'eng_name': 'Advances Customers', 'group': 'BS-Value-4'}), ('NoncurrentLiabilities', {'kor_name': '비유동부채', 'eng_name': 'Noncurrent Liabilities', 'group': 'BS-Value-3'}), ('BondsIssued', {'kor_name': '사채', 'eng_name': 'Bonds Issued', 'group': 'BS-Value-4'}), ('LongTermBorrowings', {'kor_name': '장기차입금', 'eng_name': 'Long Term Borrowings', 'group': 'BS-Value-4'}), ('LiabilitiesAbstract', {'kor_name': '부채총계', 'eng_name': 'Liabilities', 'group': 'BS-Value-2'}), ('EquitiesAbstract', {'kor_name': '자본총계', 'eng_name': 'Equities', 'group': 'BS-Value-2'}), ('LiabilitiesAndEquities', {'kor_name': '부채와자본총계', 'eng_name': 'Liabilities and Equities', 'group': 'BS-Value-1'}), ('TradeReceivableTurnoverPeriod', {'kor_name': '매출채권 회전기간', 'eng_name': 'Trade Receivable Turnover Period', 'group': 'BS-Ratio-98'}), ('PrepaidExpensesTurnoverPeriod', {'kor_name': '선급비용 회전기간', 'eng_name': 'Prepaid Expenses Turnover Period', 'group': 'BS-Ratio-98'}), ('InventoriesTurnoverPeriod', {'kor_name': '재고자산 회전기간', 'eng_name': 'Inventories Turnover Period', 'group': 'BS-Ratio-98'}), ('TradePayablesTurnoverPeriod', {'kor_name': '매입채무 회전기간', 'eng_name': 'Trade Payables Turnover Period', 'group': 'BS-Ratio-98'}), ('AdvancesCustomersTurnoverPeriod', {'kor_name': '선수금 회전기간', 'eng_name': 'Advances Customers Turnover Period', 'group': 'BS-Ratio-98'}), ('Revenue', {'kor_name': '수익(매출액)', 'eng_name': 'Revenue', 'group': 'IS-Value-5'}), ('CostOfSales', {'kor_name': '매출원가', 'eng_name': 'Cost of Sales', 'group': 'IS-Value-5'}), ('GrossProfit', {'kor_name': '매출총이익', 'eng_name': 'Gross Profit', 'group': 'IS-Value-4'}), ('SellingGeneralAdministrativeExpenses', {'kor_name': '판매비와관리비', 'eng_name': 'Selling General Administrative Expenses', 'group': 'IS-Value-4'}), ('OperatingIncome', {'kor_name': '영업이익', 'eng_name': 'Operating Income', 'group': 'IS-Value-3'}), ('FinanceIncome', {'kor_name': '금융수익', 'eng_name': 'Finance Income', 'group': 'IS-Value-3'}), ('FinancialExpenses', {'kor_name': '금융비용', 'eng_name': 'Financial Expenses', 'group': 'IS-Value-3'}), ('ProfitBeforeTax', {'kor_name': '법인세비용차감전순이익(손실)', 'eng_name': 'Profit Before Tax', 'group': 'IS-Value-2'}), ('IncomeTaxExpense', {'kor_name': '법인세비용', 'eng_name': 'IncomeTax Expense', 'group': 'IS-Value-2'}), ('Profit', {'kor_name': '당기순이익(손실)', 'eng_name': 'Profit', 'group': 'IS-Value-1'}), ('CostOfSalesRatio', {'kor_name': '매출원가율', 'eng_name': 'Cost of Sales Ratio', 'group': 'IS-Ratio-98'}), ('SellingGeneralAdministrativeRatio', {'kor_name': '판관비율', 'eng_name': 'Selling General Administrative Ratio', 'group': 'IS-Ratio-98'}), ('SalesAndSellingGeneralAdministrativeRatio', {'kor_name': '매출 및 판관 비율', 'eng_name': 'Sales and Selling General Administrative Ratio', 'group': 'IS-Ratio-98'}), ('IncomeTaxRatio', {'kor_name': '법인세율', 'eng_name': 'Income Tax Ratio', 'group': 'IS-Ratio-98'}), ('ProfitRatio', {'kor_name': '순이익율', 'eng_name': 'Profit Ratio', 'group': 'IS-Ratio-98'}), ('IncomeStatement', {'kor_name': '손익계산서', 'eng_name': 'Income Statement', 'group': 'IS-Value-0'}), ('BalanceSheet', {'kor_name': '재무상태표', 'eng_name': 'Balance Sheet', 'group': 'BS-Value-0'}), ('CalendarOneYear', {'kor_name': '365 일', 'eng_name': '365 days', 'group': 'TIME-Value-99'}), ('Ratios', {'kor_name': '재무비율', 'eng_name': 'Finance Ratio', 'group': 'FS-Ratio-0'})])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.ACC_DICT.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
