fixed logger path

--- a/Notebooks/04_NER_testing.ipynb
+++ b/Notebooks/04_NER_testing.ipynb
@@ -89,22 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'simple_l7_tk3_3'"
+       "'ce_l7_tk3_0'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_module_settings['train_file'].rstrip('.jsonl').split('_', 3)[-1]"
+    "'x_ce_l7_tk3_0.yml'.rstrip('.yml').split('_', 1)[-1]"
    ]
   },
   {
